baker-master/kubernetes/ansible/roles/ingress/traefik/templates/sample-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - nginx.sample.teko.vn
    secretName: nginx-cert
  rules:
  - host: nginx.sample.teko.vn
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
